# clipper-rs

./: Cargo.toml  README.md
examples/: basic_usage.rs  batch_processing_test.rs  comprehensive_test.rs  multi_input_test.rs
src/: catalog.rs  lib.rs  main.rs
src/clip/: mod.rs  text_model.rs  vision_model.rs
tests/: integration_test.rs  laion_l14_online.rs
