[package]
name = "clipper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = [
  "metal",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = [
  "metal",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = [
  "metal",
] }
clap = { version = "4.5.40", features = ["derive"] }
hf-hub = { version = "0.4.2", features = [
  "rustls-tls",
  "tokio",
  "ureq",
], default-features = false }
image = "0.25.6"
tokenizers = { version = "0.21.1", features = ["rustls-tls"] }
